@@ -1,6 +1,6 @@
 Package: lattice
-Version: 0.17-12
-Date: 2008/07/23
+Version: 0.17-13
+Date: 2008/08/04
 Priority: recommended
 Title: Lattice Graphics
 Author: Deepayan Sarkar <deepayan.sarkar@r-project.org>
@@ -14,4 +14,4 @@ Enhances: chron
 LazyLoad: yes
 LazyData: yes
 License: GPL (>= 2)
-Packaged: Wed Jul 23 16:15:30 2008; dsarkar
+Packaged: Tue Aug  5 15:51:35 2008; dsarkar
