@@ -34,14 +34,18 @@ prepanel.default.levelplot(x, y, subscripts, \dots)
 prepanel.default.qqmath(x, f.value, distribution, qtype,
                         groups, subscripts, \dots)
 prepanel.default.densityplot(x, darg, groups, subscripts, \dots)
-prepanel.default.parallel(x, y, z, \dots)
+prepanel.default.parallel(x, y, z, \dots, horizontal)
 prepanel.default.splom(z, \dots)
 
 }
 \arguments{
   \item{x, y}{x and y values, numeric or factor}
   \item{horizontal}{ logical, applicable when one of the variables is to
-    be treated as categorical (factor or shingle) }
+    be treated as categorical (factor or shingle).  In the case of
+    \code{prepanel.default.parallel}, a logical indicating whether the
+    parallel axes should be laid out horizontally (\code{TRUE}) or
+    vertically (\code{FALSE}).
+  }
   \item{nlevels}{ number of levels of such a categorical variable. }
   \item{origin, stack}{ for barcharts or the \code{type="h"} plot type}
   \item{breaks, equal.widths, type, nint}{ details of histogram
